Update minigame to Minecraft 1.17.1

--- a/src/main/resources/data/sculkprison/lang/en_us.json
+++ b/src/main/resources/data/sculkprison/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+	"game.sculkprison.sculk_prison": "Sculk Prison",
 	"gameType.sculkprison.sculk_prison": "Sculk Prison",
 	"text.sculkprison.cage_locked": "Cage Locked - Hide",
 	"text.sculkprison.cage_unlocked": "Cage Unlocked - Survive",
